# Lagos-Price-Sniper-Bot

./: .gitignore  Dockerfile  README.md  extractor.py  main.py  progress_summary.txt  pyproject.toml  render-build.sh  requirements.txt  scraper.py  test_curl.py  test_jumia.py
src/: config.py  main.py
src/bot/: app.py  handlers.py
src/database/: interface.py  json_db.py  postgres.py
src/scraper/: cache.py  client.py  jumia.py
src/services/: price_checker.py  query_cleaner.py  search.py
tests/: test_database.py  test_jumia.py  test_query_cleaner.py
