[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jumia-price-sniper-bot"
version = "2.0.0"
description = "Telegram bot that scrapes Jumia Nigeria for the best deals"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "playwright>=1.40",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
